--- a/assets/css/src/styles.css
+++ b/assets/css/src/styles.css
@@ -10,12 +10,21 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'OpenSans-Regular';
+    src: url('../../font/OpenSans-Regular.ttf');
+    src: url('../../font/OpenSans-Regular?#iefix') format('embedded-opentype'),
+      url('../../font/OpenSans-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
  
 @font-face {
-    font-family: 'opensansRegular';
-    src: url('../../font/opensansRegular.ttf');
-    src: url('../../font/opensansRegular?#iefix') format('embedded-opentype'),
-      url('../../font/opensansRegular.ttf') format('truetype');
+    font-family: 'OpenSans-Regular';
+    src: url('../../font/OpenSans-Regular.ttf');
+    src: url('../../font/OpenSans-Regular?#iefix') format('embedded-opentype'),
+      url('../../font/OpenSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 } 
@@ -28,29 +37,29 @@ h2{
     font-size: 5rem;
 }
 
+h3{
+    font-size: 4rem;
+}
+
+h4{
+    font-size: 3rem;
+}
+
+h4{
+    font-size: 2rem;
+}
+
 p{
     font-size: 1.5rem;
-    font-family: 'opensansRegular';
+    font-family: 'OpenSans-Regular';
+    text-align: justify;
 }
 
 /*  #### Imagens ####  */
 
 img {
-    width: inherit;
-    height: inherit;
-}
-
-section.linguas{
-    position: absolute;
-    right: 10px;
-    display: grid;
-    grid-template-columns: 50px 50px 50px;
-    grid-gap: 10px;
-}
-
-section.linguas a{
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: auto;
 }
  
 /*  #### Efeitos ####  */
@@ -103,7 +112,32 @@ svg {
     width: 2rem;
 }
 
+button{
+    background: none;
+    display: block;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
 /* ### Conteúdo ### */
+section.linguas{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    display: grid;
+    grid-template-columns: 40px 40px 40px 40px;
+    grid-gap: 10px;
+}
+
+section.linguas button{
+    width: 40px;
+    height: 40px;
+}
+
+section.linguas .ativo{
+    border-bottom: 2px solid white
+}
 
 .titulo{
     font-family: 'OpenSans-Bold';
@@ -173,30 +207,33 @@ footer{
     opacity: 0.7; 
     grid-template-columns: 1fr 1fr 1fr 1fr;   
 }
-
-footer a{
+  
+footer button{ 
     height: 2.3rem;
     padding: 5px;
     display: block;
     text-align: center
-}
+} 
 
-footer a#verde{
-    background-color: green;
-    width: 100%;
-}
-
-footer a#azul-claro{
-    background-color: #006699;
-    width: 100%;
-}
-
-footer a#cinza{
+footer #verde, footer #azul-claro, footer #cinza, footer #colorido{
     background-color: black;
     width: 100%;
+    transition: 0.2s;
+    text-align: center;
 }
 
-footer a#colorido{
+footer #verde:hover{
+    background-color: rgb(0, 202, 0);
+}
+
+footer #azul-claro:hover{
+    background-color: #006699;
+}
+
+footer #cinza:hover{
+    background-color: rgb(59, 59, 59);
+}
+
+footer #colorido:hover{
     background-color: #EB159B;
-    width: 100%;
 }
