--- a/assets/css/src/styles.css
+++ b/assets/css/src/styles.css
@@ -178,9 +178,8 @@ section.linguas .ativo{
     z-index: -1;
     height: 100vh;
     transform: translateZ(-0.9px) scale(2);
-    background: url(../../img/image-01.jpg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background: url(../../img/image-01.jpg) center no-repeat;
+    background-size: cover;
     background-origin: content-box;
     background-color: #fae4d8;
     align-content: center;
@@ -204,22 +203,20 @@ footer{
     display: grid;
     width: 100%;
     z-index: 3;
-    opacity: 0.7; 
-    grid-template-columns: 1fr 1fr 1fr 1fr;   
-}
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: black;
+    text-align: center;
+}   
   
-footer button{ 
+footer a{ 
     height: 2.3rem;
-    padding: 5px;
+    padding: 0.5em 1em;
     display: block;
-    text-align: center
 } 
 
 footer #verde, footer #azul-claro, footer #cinza, footer #colorido{
-    background-color: black;
     width: 100%;
     transition: 0.2s;
-    text-align: center;
 }
 
 footer #verde:hover{
