--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -342,9 +342,7 @@ main {
         }
 
         .side-bar {
-
-            height: calc(100% - 50px);
-            max-height: 700px;
+            height: auto;
             @include scroll(#f1f1f1);
             background-color: #393E46;
             transition-duration: 0.5s;
@@ -352,6 +350,18 @@ main {
             display: flex;
             justify-content: center;
             align-items: center;
+
+            @media (min-width: 1025px) {
+                width: 360px;
+                margin: 25px 0;
+                min-height: calc(100% - 50px);
+                max-height: 700px;
+            }
+
+            @media (max-width: 1025px) {
+                width: 100%;
+                min-height: 100vh;
+            }
 
             > .container {
                 text-align: center;
@@ -455,16 +465,6 @@ main {
                 }
             }
 
-            @media (min-width: 1025px) {
-                width: 360px;
-                margin: 25px 0;
-            }
-
-            @media (max-width: 1025px) {
-                width: 100%;
-                height: 100vh;
-            }
-
             .footer {
                 text-align: center;
                 bottom: 20px;
@@ -481,21 +481,25 @@ main {
         .right {
             right: 0;
             width: 100%;
-            height: 95vh;
-            max-height: 800px;
             background-color: #222831;
 
-            padding: 5% 5% 0% 5%;
+            padding: 10% 5% 0% 5%;
 
             transition-duration: 0.5s;
 
+            display: flex;
+            align-items: center;
+
             @include scroll(#393E46);
 
-            @media (min-width: 1025px) {
-                max-width: 700px;
+            @media (max-width: 1025px) {
+                height: auto
             }
 
-            @media (max-width: 1904px) {
+            @media (min-width: 1025px) {
+                max-height: 800px;
+                max-width: 700px;
+                height: 95vh;
                 box-shadow: -2px 0 15px rgba(#000, 0.5);
             }
 
@@ -504,7 +508,12 @@ main {
                 align-items: center;
             }
 
-            .container {
+            .center-content {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
                 .header {
                     width: 100%;
                     display: block;
@@ -551,7 +560,7 @@ main {
 
                 .portfolio {
                     width: 100%;
-                    height: 100%;
+                    height: auto;
                     display: flex;
                     position: relative;
                     margin: 20px 0 0 0;
@@ -626,7 +635,7 @@ main {
                             }
 
                             @media (max-width: 1024px) {
-                                width: calc(80vw - 8px);
+                                width: 99%;
                             }
 
                             .ico {
