--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -662,10 +662,9 @@ main {
                         }
 
                         .imagem {
-                            width: 116px;
-                            height: 87px;
+                            width: 100%;
+                            height: 100%;
                             display: block;
-                            margin: -2px;
 
                             img {
                                 width: 100%;
@@ -677,7 +676,7 @@ main {
 
                         &:hover {
                             .portfolio__item--header {
-                                height: 95%;
+                                height: calc(100% - 4px);
                                 transition: height 0.5s ease 0s;
 
                                 .bullet {
